# relaksim

./: Cargo.toml  README.md  relaxKernel.cu  relaxKernel.ptx
src/: main.rs  main_original.rs  main_par.rs  main_simple.rs
