[package]
name = "gridsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
convolutions-rs = "0.3.4"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-parallel = "0.9.1"
plotters = "0.3.0"
rayon = "1.10.0"
